After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737797 - rtsp-stream: lock not released when leaving bin and transports not removed
rtsp-stream: lock not released when leaving bin and transports not removed
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-10-02 19:01 UTC by Aleix Conchillo Flaqué
Modified: 2014-10-21 08:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
release lock even not leaving the bin (1.29 KB, patch)
2014-10-02 19:05 UTC, Aleix Conchillo Flaqué
none Details | Review
release lock even not leaving the bin fixup (1.29 KB, patch)
2014-10-02 19:10 UTC, Aleix Conchillo Flaqué
committed Details | Review

Description Aleix Conchillo Flaqué 2014-10-02 19:01:36 UTC
If not all transports have been removed from the bin the stream will keep the lock which might lead to a deadlock.

Even this is a condition that needs to be met, we need to release the lock when reporting the error.
Comment 1 Aleix Conchillo Flaqué 2014-10-02 19:05:54 UTC
Created attachment 287617 [details] [review]
release lock even not leaving the bin

Always release the lock even we can't leave the bin.
Comment 2 Aleix Conchillo Flaqué 2014-10-02 19:10:10 UTC
Created attachment 287618 [details] [review]
release lock even not leaving the bin fixup

Sorry, uploaded the wrong patch.
Comment 3 Wim Taymans 2014-10-21 08:10:34 UTC
commit 966065a018ee7abd3bbab6172d3a3e94abc027b0
Author: Aleix Conchillo Flaqué <aleix@oblong.com>
Date:   Thu Oct 2 12:02:48 2014 -0700

    stream: release lock even not all transports have been removed
    
    We don't want to keep the lock even we return FALSE because not all the
    transports have been removed. This could lead into a deadlock.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=737797